Bug 458767 - Help page for Virtual Desktops is missing
Summary: Help page for Virtual Desktops is missing
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_kwinvirtualdesktops (other bugs)
Version First Reported In: 5.25.4
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-09-05 23:38 UTC by Natalie Clarius
Modified: 2022-09-09 16:02 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Natalie Clarius 2022-09-05 23:38:40 UTC
The docbook for virtual desktops exists in the KWin source repository, but is not correctly linked or something and is not accessible in system setting.

STEPS TO REPRODUCE
System Settings > Workspace Behavior > Virtual Desktops

OBSERVED RESULT
no help button

EXPECTED RESULT
help button

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.25.4
KDE Frameworks Version: 5.97.0
Qt Version: 5.15.5
Kernel Version: 5.19.5-arch1-1 (64-bit)
Graphics Platform: X11
Comment 1 Nate Graham 2022-09-09 03:51:45 UTC
Maybe it's something as simple as not having the help button enabled...
Comment 2 Nate Graham 2022-09-09 03:53:48 UTC
That's part of it. In kcmkwin/kwindesktop/virtualdesktops.cpp, changing

> setButtons(Apply | Default);

to

> setButtons(Apply | Default | Help);

makes the button appear, but clicking on it takes you to a "page not found" message. So something else is also not wired up correctly.

Maybe you can figure out how the existing doc path is specified in another KCM that has it working, and see what's missing for the VIrtual Desktops KCM's code?
Comment 3 Bug Janitor Service 2022-09-09 05:28:56 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/2923
Comment 4 Nate Graham 2022-09-09 16:02:18 UTC
Git commit d2ec8ac64324c571b7b4ce88b1e9d1b692be074b by Nate Graham, on behalf of Natalie Clarius.
Committed on 09/09/2022 at 15:27.
Pushed by ngraham into branch 'master'.

kcm/kwindesktop: fix broken help page link

M  +1    -1    src/kcmkwin/kwindesktop/kcm_kwin_virtualdesktops.json
M  +1    -1    src/kcmkwin/kwindesktop/virtualdesktops.cpp

https://invent.kde.org/plasma/kwin/commit/d2ec8ac64324c571b7b4ce88b1e9d1b692be074b