kcm/kwindesktop: fix broken help page link

BUG: 458767